fix: Gap in footer

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -23,6 +23,7 @@
   justify-content: center;
   align-items: center;
   margin-right: 5%;
+  gap: 10px;
 }
 
 .extraLinks p {
